--- a/src/assets/css/add/AddSpell.css
+++ b/src/assets/css/add/AddSpell.css
@@ -145,6 +145,7 @@
     position: absolute;
     opacity: 0;
     cursor: pointer;
+    display: none;
   }
   
   #newSpell .checkbox-label .checkbox-custom {
