--- a/src/assets/css/gear/GearView.css
+++ b/src/assets/css/gear/GearView.css
@@ -147,6 +147,7 @@ body {
     position: absolute;
     opacity: 0;
     cursor: pointer;
+    display: none;
   }
   
   .checkbox-label .checkbox-custom {
