--- a/src/assets/css/item/ItemView.css
+++ b/src/assets/css/item/ItemView.css
@@ -148,6 +148,7 @@ body {
     position: absolute;
     opacity: 0;
     cursor: pointer;
+    display: none;
   }
   
   .checkbox-label .checkbox-custom {
